Message and Calling added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.google.android.material:material:1.1.0-alpha10'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.0.0-alpha1'
+    implementation 'com.google.code.gson:gson:2.7'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
