--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha10'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.0.0-alpha1'
     implementation 'com.google.code.gson:gson:2.7'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
