--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,12 +34,12 @@ dependencies {
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.0.0-alpha1'
     implementation 'com.google.code.gson:gson:2.7'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
-
-
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
